deployment/01-ocp/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ibm-cloud-module-provisioner-ocp-ns
  labels:
    app: ibm-cloud-module-provisioner-application
